-
Bug
-
Resolution: Done
-
P0: Blocker
-
6.5.0 FF
-
None
-
945398a4a7 (qt/qtwebengine/dev) a3ab158591 (qt/qtwebengine/6.3) ad6540a5bb (qt/qtwebengine/6.4) ad6540a5bb (qt/qtwebengine/6.4.0) a3ab158591 (qt/tqtc-qtwebengine/6.3) ad6540a5bb (qt/tqtc-qtwebengine/6.4) ad6540a5bb (qt/tqtc-qtwebengine/6.4.0)
/Users/qt/work/qt/qtwebengine/src/webenginequick/api/qquickwebenginesingleton.cpp
agent:2022/08/31 08:53:05 build.go:394: In file included from /Users/qt/work/qt/qtwebengine/src/webenginequick/api/qquickwebenginesingleton.cpp:84:
agent:2022/08/31 08:53:05 build.go:394: /Users/qt/work/qt/qtwebengine_build/src/webenginequick/WebEngineQuick_autogen/include/moc_qquickwebenginesingleton_p.cpp:38:69: error: use of undeclared identifier 'QtMocHelpers'; did you mean '::TestNamespace::TestNamespace::QtMocHelpers'?
agent:2022/08/31 08:53:05 build.go:394: static constexpr auto qt_meta_stringdata_QQuickWebEngineSingleton = QtMocHelpers::stringData(
agent:2022/08/31 08:53:05 build.go:394: ^~~~~~~~~~~~
agent:2022/08/31 08:53:05 build.go:394: ::TestNamespace::TestNamespace::QtMocHelpers
agent:2022/08/31 08:53:05 build.go:394: /Users/qt/work/install/include/QtCore/qtmochelpers.h:25:11: note: '::TestNamespace::TestNamespace::QtMocHelpers' declared here
agent:2022/08/31 08:53:05 build.go:394: namespace QtMocHelpers {
agent:2022/08/31 08:53:05 build.go:394: ^
agent:2022/08/31 08:53:05 build.go:394: 1 error generated.
agent:2022/08/31 08:53:05 build.go:394: Sccache command failed, re-try calling build tool directly
agent:2022/08/31 08:53:05 build.go:394: In file included from /Users/qt/work/qt/qtwebengine/src/webenginequick/api/qquickwebenginesingleton.cpp:84:
agent:2022/08/31 08:53:05 build.go:394: /Users/qt/work/qt/qtwebengine_build/src/webenginequick/WebEngineQuick_autogen/include/moc_qquickwebenginesingleton_p.cpp:38:69: error: use of undeclared identifier 'QtMocHelpers'; did you mean '::TestNamespace::TestNamespace::QtMocHelpers'?
agent:2022/08/31 08:53:05 build.go:394: static constexpr auto qt_meta_stringdata_QQuickWebEngineSingleton = QtMocHelpers::stringData(
agent:2022/08/31 08:53:05 build.go:394: ^~~~~~~~~~~~
agent:2022/08/31 08:53:05 build.go:394: ::TestNamespace::TestNamespace::QtMocHelpers
agent:2022/08/31 08:53:05 build.go:394: /Users/qt/work/install/include/QtCore/qtmochelpers.h:25:11: note: '::TestNamespace::TestNamespace::QtMocHelpers' declared here
agent:2022/08/31 08:53:05 build.go:394: namespace QtMocHelpers {
agent:2022/08/31 08:53:05 build.go:394: ^
agent:2022/08/31 08:53:05 build.go:394: 1 error generated.
Details: https://testresults.qt.io/coin/integration/qt/qtwebengine/tasks/1661934020
Tested changes (refs/builds/qtci/dev/1661934019):
https://codereview.qt-project.org/c/qt/qtwebengine/+/429715/2 Update dependencies on 'dev' in qt/qtwebengine