Fix moc's namespace for qquickwebenginesingleton

Fixes: QTBUG-106090
Pick-to: 6.4 6.3
Change-Id: If0572c92e5b9fe6ae44c2d93d38dfa0f68289994
Reviewed-by: Michael Brüning <michael.bruning@qt.io>