src/webenginequick/api/qquickwebenginesingleton.cpp
@@ -81,6 +81,7 @@ QWebEngineScript QQuickWebEngineSingleton::script() const
     return QWebEngineScript();
 }
 
+QT_END_NAMESPACE
+
 #include "moc_qquickwebenginesingleton_p.cpp"
 
-QT_END_NAMESPACE
